# libdistanceproto

./: .gitignore  CMakeLists.txt  README.md  deepstream.Dockerfile  docker_build_deepstream.sh  docker_build_ubuntu.sh  meson.build  ubuntu.Dockerfile
src/: CMakeLists.txt  distance.proto  distanceproto.pc.in  meson.build  meta.proto
src/c/: meson.build
src/cpp/: meson.build
src/js/: meson.build
src/python/: __init__.py  meson.build
