# Yeah, this is easier than Meson for sure for protobuf
SET(DISTANCEPROTO_VERSION_MAJOR 0)
SET(DISTANCEPROTO_VERSION_MINOR 1)
SET(DISTANCEPROTO_VERSION_PATCH 0)
SET(DISTANCEPROTO_VERSION_STRING ${DISTANCEPROTO_VERSION_MAJOR}.${DISTANCEPROTO_VERSION_MINOR}.${DISTANCEPROTO_VERSION_PATCH})


INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER distance.proto)
PROTOBUF_GENERATE_PYTHON(PROTO_PY distance.proto)

ADD_LIBRARY(distanceproto SHARED ${PROTO_SRC})
SET_TARGET_PROPERTIES(distanceproto PROPERTIES PUBLIC_HEADER ${PROTO_HEADER})
SET_TARGET_PROPERTIES(distanceproto PROPERTIES VERSION ${DISTANCEPROTO_VERSION_STRING} SOVERSION ${DISTANCEPROTO_VERSION_MAJOR})

INSTALL(
    TARGETS distanceproto
    DESTINATION lib
    PUBLIC_HEADER DESTINATION include
)
