# Yeah, this is easier than Meson for sure for protobuf
SET(DISTANCEPROTO_VERSION_MAJOR 0)
SET(DISTANCEPROTO_VERSION_MINOR 1)
SET(DISTANCEPROTO_VERSION_PATCH 0)
SET(DISTANCEPROTO_VERSION_STRING ${DISTANCEPROTO_VERSION_MAJOR}.${DISTANCEPROTO_VERSION_MINOR}.${DISTANCEPROTO_VERSION_PATCH})


INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER distance.proto)
PROTOBUF_GENERATE_PYTHON(PROTO_PY distance.proto)

ADD_LIBRARY(distanceproto SHARED ${PROTO_SRC})
SET_TARGET_PROPERTIES(distanceproto PROPERTIES PUBLIC_HEADER ${PROTO_HEADER})
SET_TARGET_PROPERTIES(distanceproto PROPERTIES VERSION ${DISTANCEPROTO_VERSION_STRING} SOVERSION ${DISTANCEPROTO_VERSION_MAJOR})

INSTALL(
    DESTINATION lib/${CMAKE_CXX_LIBRARY_ARCHITECTURE}
    PUBLIC_HEADER DESTINATION include
)

# generate and install pkg-config file
SET(PROJECT_PC_NAME ${PROJECT_NAME}-${DISTANCEPROTO_VERSION_MAJOR}.${DISTANCEPROTO_VERSION_MINOR}.pc)
CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_PC_NAME} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_PC_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/pkgconfig)
