# Yeah, this is easier than Meson for sure for protobuf
INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)

INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER distance.proto)
PROTOBUF_GENERATE_PYTHON(PROTO_PY distance.proto)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${PROTO_SRC})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER ${PROTO_HEADER})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VERSION ${DISTANCEPROTO_VERSION_STRING} SOVERSION ${DISTANCEPROTO_VERSION_MAJOR})

INSTALL(
    TARGETS ${PROJECT_NAME}
    DESTINATION lib/${CMAKE_CXX_LIBRARY_ARCHITECTURE}
    PUBLIC_HEADER DESTINATION include
)

# generate and install pkg-config file
SET(PROJECT_PC_NAME ${PROJECT_NAME}-${DISTANCEPROTO_VERSION_MAJOR}.${DISTANCEPROTO_VERSION_MINOR}.pc)
CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_PC_NAME} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_PC_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/pkgconfig)
